# ros-test

./: package.xml  setup.py
launch/: display.launch.py  hand_tracking.launch.py
maverick/: setup.py
maverick/launch/: full.launch.py
maverick/maverick/: gripperControl.py  poseDetection.py
rviz/: urdf.rviz
scripts/: hand_tracking_node.py
